Update and rename ph_folium_map.ipynb to 1_ph_folium_map.ipynb

--- a/folium_marker_map/ph_json/1_ph_folium_map.ipynb
+++ b/folium_marker_map/ph_json/1_ph_folium_map.ipynb
@@ -73,7 +73,7 @@
    "outputs": [],
    "source": [
     "map_osm = folium.Map([33.681229,-117.258796691895],zoom_start=6,tiles='Stamen Terrain')\n",
-    "ca_counties = os.path.join(r'C:\\Users\\Jin Park\\PycharmProjects\\ECE143_group_map',r'ca-counties.geojson')\n",
+    "ca_counties = r'ca-counties.geojson'\n",
     "folium.GeoJson(ca_counties,name='geojson').add_to(map_osm)\n",
     "folium.LayerControl().add_to(map_osm)\n",
     "\n",
