final version ph folium map

--- a/folium_marker_map/ph_json/1_ph_folium_map.ipynb
+++ b/folium_marker_map/ph_json/1_ph_folium_map.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -44,7 +44,10 @@
     "from  IPython.display  import HTML\n",
     "\n",
     "def display(m):\n",
-    "    \"\"\"Takes a folium instance and embed HTML.\"\"\"\n",
+    "    '''\n",
+    "    display folium data to with the html output\n",
+    "    param: m : folium map with every layer added\n",
+    "    '''\n",
     "    #m._build_map()\n",
     "    height=1000\n",
     "    srcdoc = m.HTML.replace('\"', '&quot;')\n",
@@ -61,12 +64,13 @@
     "#### creates folium map\n",
     "creates the foliummap with initial setting\n",
     "geojson files creates another layer on top of original map_osm\n",
-    "county_dat.csv inclues all the mean values geolocation data of each county"
+    "'county_dat.csv' inclues all the mean values geolocation data of each county\n",
+    "we use 'pandas' libraries to read the 'county_data.csv'. It has all the counties geolocation data, we are able to get the average geo location value from using \"zip code\" we use pandas to filter them all by the name of the county.we use 'GeoPy' libraries. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -93,7 +97,11 @@
    "metadata": {},
    "source": [
     "#### json file list\n",
-    "json files include the bar graph with data and this creates pop up window when we click the marker on the map"
+    "json files include the bar graph with data and this creates pop up window when we click the marker on the map\n",
+    "\n",
+    "###### How we make this?\n",
+    "Every measured points has the location value, but we are not able to get the name of the each county. So we also use 'GeoPy' to find the name of county from each variable. and then we filtered them with 'Year' and 'County' and also we use 'pandas' to get the median value of parameters.\n",
+    "So we make json files with graph based on the annual average data of each county.\n"
    ]
   },
   {
